Organic Products Data Added

--- a/kelabros/components/organics.html
+++ b/kelabros/components/organics.html
@@ -21,242 +21,77 @@
 </div>
 
 <div class="dryfruits">
-  <div class="card protypes" id="sectionName1">
-    <div data-toggle="collapse" data-target="#dryFruit1" data-parent="#sectionName1">
-      <h3>Dry Fruit 1</h3>
+  <div class="protypes" id="sectionName1">
+    <div data-target="#dryFruit1">
+      <h3>Organic Products</h3>
     </div>
-    <div id="dryFruit1" class="collapse multi-collapse container" data-parent="#sectionName1">
-      <div class="products products-five row">
-        <div class="col-lg-2 col-md-4 col-sm-4">
+    <div id="dryFruit1" class="multi-collapse container dry-fruit-content" data-parent="#sectionName1">
+      <div class="dry-fruit-cards">
+        <span> Nutritional Fact about Organic Products </span>
+      </div>
+      <div class="products products-three row">
+        <div class="col-lg-4 col-md-4 col-sm-4">
           <div data-toggle="collapse" data-target="#dryFruit1Content1" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Dry Fruits One</h2>
+            <h2>Organic Haldi Powder</h2>
           </div>
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
+        <div class="col-lg-4 col-md-4 col-sm-4">
           <div data-toggle="collapse" data-target="#dryFruit1Content2" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Dry Fruits Two</h2>
+            <h2>Organic Gul Vadi</h2>
           </div>
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
+        <div class="col-lg-4 col-md-4 col-sm-4">
           <div data-toggle="collapse" data-target="#dryFruit1Content3" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Dry Fruits Three</h2>
+            <h2>Organic Gul Powder</h2>
           </div>
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
+        <div class="col-lg-4 col-md-4 col-sm-4">
           <div data-toggle="collapse" data-target="#dryFruit1Content4" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Dry Fruits Four</h2>
+            <h2>Organic Cashews</h2>
           </div>
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
+        <div class="col-lg-4 col-md-4 col-sm-4">
           <div data-toggle="collapse" data-target="#dryFruit1Content5" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Dry Fruits Five</h2>
+            <h2>Chemical-free sugar crystals</h2>
           </div>
         </div>
-      </div>
-      <div class="cards">
-        <span> QWERTY </span>
       </div>
       <div class="products information row">
-        <div class="collapse multi-collapse" id="dryFruit1Content1" data-parent="#dryFruit1">
+        <div class="collapse multi-collapse w-100" id="dryFruit1Content1" data-parent="#dryFruit1">
           <div class="card card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+            Almonds facts
           </div>
         </div>
-        <div class="collapse multi-collapse" id="dryFruit1Content2" data-parent="#dryFruit1">
+        <div class="collapse multi-collapse w-100" id="dryFruit1Content2" data-parent="#dryFruit1">
           <div class="card card-body">
-            Content II Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+            Content II Masala Almonds facts.
           </div>
         </div>
-        <div class="collapse multi-collapse" id="dryFruit1Content3" data-parent="#dryFruit1">
+        <div class="collapse multi-collapse w-100" id="dryFruit1Content3" data-parent="#dryFruit1">
           <div class="card card-body">
-            Content III Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+            Content III Salted Almonds facts.
           </div>
         </div>
-        <div class="collapse multi-collapse" id="dryFruit1Content4" data-parent="#dryFruit1">
+        <div class="collapse multi-collapse w-100" id="dryFruit1Content4" data-parent="#dryFruit1">
           <div class="card card-body">
-            Content IV Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+            Content IV Chocolate Almonds facts.
           </div>
         </div>
-        <div class="collapse multi-collapse" id="dryFruit1Content5" data-parent="#dryFruit1">
+        <div class="collapse multi-collapse w-100" id="dryFruit1Content5" data-parent="#dryFruit1">
           <div class="card card-body">
-            Content V Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+            Content V Rare Variety Almonds facts.
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="card protypes" id="sectionName2">
-    <div data-toggle="collapse" data-target="#dryFruit2" data-parent="#sectionName2">
-      <h3>Walnuts</h3>
-    </div>
-    <div id="dryFruit2" class="collapse multi-collapse container" data-parent="#sectionName2">
-      <div class="products products-three row">
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit2Content1" data-parent="#dryFruit2">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Walnuts One</h2>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit2Content2" data-parent="#dryFruit2">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Walnuts Two</h2>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit2Content3" data-parent="#dryFruit2">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Walnuts Three</h2>
-          </div>
-        </div>
-      </div>
-      <div class="cards">
-        <span> QWERTY </span>
-      </div>
-      <div class="products information row">
-        <div class="collapse multi-collapse" id="dryFruit2Content1" data-parent="#dryFruit2">
-          <div class="card card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-        <div class="collapse multi-collapse" id="dryFruit2Content2" data-parent="#dryFruit2">
-          <div class="card card-body">
-            Content II Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-        <div class="collapse multi-collapse" id="dryFruit2Content3" data-parent="#dryFruit2">
-          <div class="card card-body">
-            Content III Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="card protypes" id="sectionName3">
-    <div data-toggle="collapse" data-target="#dryFruit3" data-parent="#sectionName3">
-      <h3>Almonds</h3>
-    </div>
-    <div id="dryFruit3" class="collapse multi-collapse container" data-parent="#sectionName3">
-      <div class="products products-five row">
-        <div class="col-lg-2 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit3Content1" data-parent="#dryFruit3">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Almonds One</h2>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit3Content2" data-parent="#dryFruit3">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Almonds Two</h2>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit3Content3" data-parent="#dryFruit3">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Almonds Three</h2>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit3Content4" data-parent="#dryFruit3">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Almonds Four</h2>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit3Content5" data-parent="#dryFruit3">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Almonds Five</h2>
-          </div>
-        </div>
-      </div>
-      <div class="cards">
-        <span> QWERTY </span>
-      </div>
-      <div class="products information row">
-        <div class="collapse multi-collapse" id="dryFruit3Content1" data-parent="#dryFruit3">
-          <div class="card card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-        <div class="collapse multi-collapse" id="dryFruit3Content2" data-parent="#dryFruit3">
-          <div class="card card-body">
-            Content II Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-        <div class="collapse multi-collapse" id="dryFruit3Content3" data-parent="#dryFruit3">
-          <div class="card card-body">
-            Content III Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-        <div class="collapse multi-collapse" id="dryFruit3Content4" data-parent="#dryFruit3">
-          <div class="card card-body">
-            Content IV Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-        <div class="collapse multi-collapse" id="dryFruit3Content5" data-parent="#dryFruit3">
-          <div class="card card-body">
-            Content V Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="card protypes" id="sectionName4">
-    <div data-toggle="collapse" data-target="#dryFruit4" data-parent="#sectionName4">
-      <h3>Cashew</h3>
-    </div>
-    <div id="dryFruit4" class="collapse multi-collapse container" data-parent="#sectionName4">
-      <div class="products products-three row">
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit4Content1" data-parent="#dryFruit4">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Cashew One</h2>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit4Content2" data-parent="#dryFruit4">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Cashew Two</h2>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
-          <div data-toggle="collapse" data-target="#dryFruit4Content3" data-parent="#dryFruit4">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
-            <h2>Cashew Three</h2>
-          </div>
-        </div>
-      </div>
-      <div class="cards">
-        <span> QWERTY </span>
-      </div>
-      <div class="products information row">
-        <div class="collapse multi-collapse" id="dryFruit4Content1" data-parent="#dryFruit4">
-          <div class="card card-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-        <div class="collapse multi-collapse" id="dryFruit4Content2" data-parent="#dryFruit4">
-          <div class="card card-body">
-            Content II Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-        <div class="collapse multi-collapse" id="dryFruit4Content3" data-parent="#dryFruit4">
-          <div class="card card-body">
-            Content III Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
+  <hr  />
 </div>
 
 <div id="footer">
