--- a/kelabros/components/dryFruits.html
+++ b/kelabros/components/dryFruits.html
@@ -34,6 +34,24 @@
             <div data-toggle="collapse" data-target="#dryFruit1Content1" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Selected Almonds</h2>
+              <table class="table table-striped">
+                <tr>
+                  <td>1 kg</td>
+                  <td>Rs. 1400</td>
+                </tr>
+                <tr>
+                  <td>500 g</td>
+                  <td>Rs. 700</td>
+                </tr>
+                <tr>
+                  <td>250 g</td>
+                  <td>Rs. 350</td>
+                </tr>
+                <tr>
+                  <td>100 g</td>
+                  <td>Rs. 140</td>
+                </tr>
+              </table>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4">
