Dry fruit prices added

--- a/kelabros/components/nutrition.html
+++ b/kelabros/components/nutrition.html
@@ -30,19 +30,19 @@
           <span> Nutritional Fact about Nutri Seeds </span>
         </div>
         <div class="products products-three row">
-          <div class="col-lg-4 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit1Content1" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Sunflower Seeds</h2>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit1Content2" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Pumpkin Seeds</h2>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit1Content3" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Chia Seeds</h2>
@@ -96,55 +96,55 @@
           <span> Nutritional Fact about Dried Real Fruits </span>
         </div>
         <div class="products products-three row">
-          <div class="col-lg-4 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content1" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Mosambi</h2>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content2" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Lemon</h2>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content3" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Pineapple</h2>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content4" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Kiwi</h2>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content5" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Strawberry</h2>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content6" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Cranberry</h2>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content7" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Cherries</h2>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content8" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Blueberry</h2>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content9" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Prunes</h2>
