--- a/kelabros/components/spices.html
+++ b/kelabros/components/spices.html
@@ -30,55 +30,55 @@
         <span> Nutritional Fact about Spices </span>
       </div>
       <div class="products products-three row">
-        <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 product-border">
           <div data-toggle="collapse" data-target="#dryFruit1Content1" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
             <h2>Dalchini</h2>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 product-border">
           <div data-toggle="collapse" data-target="#dryFruit1Content2" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
             <h2>Lavang</h2>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 product-border">
           <div data-toggle="collapse" data-target="#dryFruit1Content3" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
             <h2>Elaichi</h2>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 product-border">
           <div data-toggle="collapse" data-target="#dryFruit1Content4" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
             <h2>Tamalpatra</h2>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 product-border">
           <div data-toggle="collapse" data-target="#dryFruit1Content5" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
             <h2>Dagadphool</h2>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 product-border">
           <div data-toggle="collapse" data-target="#dryFruit1Content6" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
             <h2>Hing</h2>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 product-border">
           <div data-toggle="collapse" data-target="#dryFruit1Content7" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
             <h2>Dhana</h2>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 product-border">
           <div data-toggle="collapse" data-target="#dryFruit1Content8" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
             <h2>Jeera</h2>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 product-border">
           <div data-toggle="collapse" data-target="#dryFruit1Content9" data-parent="#dryFruit1">
             <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
             <h2>Masala Elaichi</h2>
