Dry fruit images added

--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -191,6 +191,10 @@
     color: #FFD57E;
     border-radius: 1%;
   }
+
+  .price-table th {
+    color: white;
+  }
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
 /* recommendedProducts */
