--- a/kelabros/components/images/dryFruits.html
+++ b/kelabros/components/images/dryFruits.html
@@ -23,7 +23,7 @@
   <div class="dryfruits">
     <div class="protypes" id="sectionName1">
       <div data-target="#dryFruit1">
-        <h3>Almonds</h3>
+        <h3>Almonds  </h3>
       </div>
       <div id="dryFruit1" class="multi-collapse container dry-fruit-content" data-parent="#sectionName1">
         <div class="dry-fruit-cards">
@@ -32,13 +32,9 @@
         <div class="products products-three row">
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit1Content1" data-parent="#dryFruit1">
-              <img src="images/Almonds.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Selected Almonds</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 1000</td>
@@ -60,13 +56,9 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit1Content2" data-parent="#dryFruit1">
-              <img src="images/Almonds.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Salted Almond</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 1200</td>
@@ -88,13 +80,9 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit1Content3" data-parent="#dryFruit1">
-              <img src="images/OreoAlmonds.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Oreo Almond</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 1200</td>
@@ -116,13 +104,9 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit1Content4" data-parent="#dryFruit1">
-              <img src="images/ChocoAlmonds.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Chocolate Almond</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 1200</td>
@@ -144,13 +128,9 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit1Content5" data-parent="#dryFruit1">
-              <img src="images/CoffeeAlmonds.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Coffee Almonds</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 1200</td>
@@ -172,13 +152,9 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit1Content6" data-parent="#dryFruit1">
-              <img src="images/AlmondsMangoCoated.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Mango Almond</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 1200</td>
@@ -200,13 +176,9 @@
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12">
             <div data-toggle="collapse" data-target="#dryFruit1Content7" data-parent="#dryFruit1">
-              <img src="images/Almonds.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Mamra Almonds</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 3000</td>
@@ -270,13 +242,9 @@
         <div class="products products-three row">
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content1" data-parent="#dryFruit2">
-              <img src="images/Cashew.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Plain Cashew</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 1400</td>
@@ -298,13 +266,9 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content2" data-parent="#dryFruit2">
-              <img src="images/CashewsRegular.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Salted Cashew</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 1400</td>
@@ -326,13 +290,9 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content3" data-parent="#dryFruit2">
-              <img src="images/MasalaCashew.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Masala Cashew</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 1400</td>
@@ -358,10 +318,6 @@
               <h2>Kalimiri Cashew</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
-                <tr>
                   <td>1 kg</td>
                   <td>Rs. 1400</td>
                 </tr>
@@ -382,13 +338,9 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content5" data-parent="#dryFruit2">
-              <img src="images/CheeseCashew.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Cheese Cashew</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 1400</td>
@@ -410,13 +362,9 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content6" data-parent="#dryFruit2">
-              <img src="images/Pudinacashews.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Pudina Cashew</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 1400</td>
@@ -474,10 +422,6 @@
               <h2>Brazil Nut</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
-                <tr>
                   <td>1 kg</td>
                   <td>Rs. 3000</td>
                 </tr>
@@ -502,10 +446,6 @@
               <h2>Hazelnut</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
-                <tr>
                   <td>1 kg</td>
                   <td>Rs. 1400</td>
                 </tr>
@@ -529,10 +469,6 @@
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Pecan Nut</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 2400</td>
@@ -596,13 +532,9 @@
         <div class="products products-three row">
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit4Content1" data-parent="#dryFruit4">
-              <img src="images/DryFig.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Anjeer</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 1400</td>
@@ -628,10 +560,6 @@
               <h2>Jardalu</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
-                <tr>
                   <td>1 kg</td>
                   <td>Rs. 800</td>
                 </tr>
@@ -656,10 +584,6 @@
               <h2>Kismis</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
-                <tr>
                   <td>1 kg</td>
                   <td>Rs. 600</td>
                 </tr>
@@ -680,13 +604,9 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit4Conten4" data-parent="#dryFruit4">
-              <img src="images/KalaManuka.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Kala Manuka</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 680</td>
@@ -708,13 +628,9 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit4Content5" data-parent="#dryFruit4">
-              <img src="images/Pistas.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+              <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Salted Pista</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 1800</td>
@@ -739,10 +655,6 @@
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Kala Khajur</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Qty</th>
-                  <th scope="col">Price</th>
-                </tr>
                 <tr>
                   <td>1 kg</td>
                   <td>Rs. 320</td>
