--- a/kelabros/components/dryFruits.html
+++ b/kelabros/components/dryFruits.html
@@ -36,7 +36,7 @@
               <h2>Selected Almonds</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -64,7 +64,7 @@
               <h2>Salted Almond</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -92,7 +92,7 @@
               <h2>Oreo Almond</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -120,7 +120,7 @@
               <h2>Chocolate Almond</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -148,7 +148,7 @@
               <h2>Coffee Almonds</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -176,7 +176,7 @@
               <h2>Mango Almond</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -204,7 +204,7 @@
               <h2>Mamra Almonds</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -274,7 +274,7 @@
               <h2>Plain Cashew</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -302,7 +302,7 @@
               <h2>Salted Cashew</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -330,7 +330,7 @@
               <h2>Masala Cashew</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -358,7 +358,7 @@
               <h2>Kalimiri Cashew</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -386,7 +386,7 @@
               <h2>Cheese Cashew</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -414,7 +414,7 @@
               <h2>Pudina Cashew</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -474,7 +474,7 @@
               <h2>Brazil Nut</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -502,7 +502,7 @@
               <h2>Hazelnut</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -530,7 +530,7 @@
               <h2>Pecan Nut</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -600,7 +600,7 @@
               <h2>Anjeer</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -628,7 +628,7 @@
               <h2>Jardalu</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -656,7 +656,7 @@
               <h2>Kismis</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -684,7 +684,7 @@
               <h2>Kala Manuka</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -712,7 +712,7 @@
               <h2>Salted Pista</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
@@ -740,7 +740,7 @@
               <h2>Kala Khajur</h2>
               <table class="table table-sm table-dark price-table table-bordered table-hover">
                 <tr>
-                  <th scope="col">Qty</th>
+                  <th scope="col">Quantity</th>
                   <th scope="col">Price</th>
                 </tr>
                 <tr>
