--- a/kelabros/components/Header.html
+++ b/kelabros/components/Header.html
@@ -18,7 +18,7 @@
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           PRODUCTS
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <div class="dropdown-menu header-dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="dryFruits.html">Dry Fruits</a>
           <a class="dropdown-item" href="spices.html">Spices</a>
           <a class="dropdown-item" href="organics.html">Organics</a>
