--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -547,6 +547,12 @@
 /* Generic components */
   h1 {
     /* font-family: "Montserrat"; */
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    text-align: center;
+    color: #290001;
   }
 
   h3 {
