Contact page updated

--- a/kelabros/components/contact.html
+++ b/kelabros/components/contact.html
@@ -23,8 +23,8 @@
   <div class="row contact-page-main">
     <div class="col-lg-6 col-md-6 col-sm-6 contact-left">
       <div class="cont-details">
-        <h3 class=" "><b>Get in touch</b></h3>
-        <p class="contact-text">We're ready to lead you into the future with Business Services</p>
+        <h3 class=" "><i class="far fa-hand-point-right"></i><b> Get in touch</b></h3>
+        <p class="contact-text">We're ready to lead you into the future with our Business Services.</p>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
             <div class="card bg-light contact-card">
@@ -52,9 +52,9 @@
               <div class="card-body bg-light contact-card-body">
                 <div class="card-header contact-card-header"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> Store 1:</div>
                 <p class="card-text contact-card-text">
-                  Shop no.3, Akash Apartment, Karve Road<br>
-                  Next to Bakers Basket<br>
-                  Pune, 411038.
+                  Kapad Ganj, Raviwar Peth,<br>
+                  Maharashtra <br>
+                  Pune, 411002.
                 </p>
               </div>
             </div>
@@ -64,9 +64,9 @@
               <div class="card-body bg-light contact-card-body">
                 <div class="card-header contact-card-header"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> Store 2:</div>
                 <p class="card-text contact-card-text">
-                  Kapad Ganj, Raviwar Peth,<br>
-                  Maharashtra <br>
-                  Pune, 411002.
+                  Shop no.3, Akash Apartment, Karve Road<br>
+                  Next to Bakers Basket<br>
+                  Pune, 411038.
                 </p>
               </div>
             </div>
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="cont-details">
-        <h3 class=" "><b>Working Hours</b></h3>
+        <h3 class=" "><i class="far fa-clock"></i><b> Working Hours</b></h3>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-6 contact-block">
             <div class="card bg-light contact-card">
@@ -107,7 +107,7 @@
     </div>
     <div class="col-lg-6 col-md-6 col-sm-6 contact-right">
       <div class="contact-map">
-        <h3><b>Visit Us</b></h3>
+        <h3><i class="far fa-compass"></i><b> Visit Us</b></h3>
 
         <hr />
 
