Prices UI update

--- a/kelabros/components/spices.html
+++ b/kelabros/components/spices.html
@@ -32,19 +32,19 @@
       <div class="products products-three row">
         <div class="col-lg-4 col-md-4 col-sm-4 product-border">
           <div data-toggle="collapse" data-target="#dryFruit1Content1" data-parent="#dryFruit1">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+            <img src="images/Dalchini.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
             <h2>Dalchini</h2>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 product-border">
           <div data-toggle="collapse" data-target="#dryFruit1Content2" data-parent="#dryFruit1">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+            <img src="images/Lavang.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
             <h2>Lavang</h2>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 product-border">
           <div data-toggle="collapse" data-target="#dryFruit1Content3" data-parent="#dryFruit1">
-            <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+            <img src="images/Elaichi.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
             <h2>Elaichi</h2>
           </div>
         </div>
