--- a/kelabros/components/nutrition.html
+++ b/kelabros/components/nutrition.html
@@ -34,24 +34,80 @@
             <div data-toggle="collapse" data-target="#dryFruit1Content1" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Sunflower Seeds</h2>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 800</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 400</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 200</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 80</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit1Content2" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Pumpkin Seeds</h2>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 800</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 400</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 200</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 80</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit1Content3" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Chia Seeds</h2>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 1000</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 500</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 250</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 100</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12">
             <div data-toggle="collapse" data-target="#dryFruit1Content4" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Healthy Mix Seeds</h2>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 1000</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 500</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 250</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 100</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -100,60 +156,196 @@
             <div data-toggle="collapse" data-target="#dryFruit2Content1" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Mosambi</h2>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content2" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Lemon</h2>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content3" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Pineapple</h2>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content4" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Kiwi</h2>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content5" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Strawberry</h2>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content6" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Cranberry</h2>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content7" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Cherries</h2>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content8" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Blueberry</h2>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 2400</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 1200</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 600</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 240</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit2Content9" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Prunes</h2>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">500g: + Rs. 500</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 250</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12">
             <div data-toggle="collapse" data-target="#dryFruit2Content10" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Ginger</h2>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
